[build-system]
requires = ["poetry>=1.0.9,<2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hyper-rpc"
version = "0.0.1a4"
description = "Simple RPC with Protobuf Services"
authors = ["decentral1se <hi@decentral1.se>"]
maintainers = ["decentral1se <hi@decentral1.se>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/hyperpy/hrpc"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"
protoc-wheel-0 = "^3.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.0.2"
mypy = "^0.782"

[tool.black]
line-length = 80
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
include_trailing_comma = true
known_first_party = "hrpc"
line_length = 80
multi_line_output = 3
skip = ".tox"

[tool.poetry.scripts]
hrpc = "hyper_rpc.cli:main"
protoc-gen-hrpc = "hyper_rpc.plugin:main"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    lint
    sort
    format
    type
skip_missing_interpreters = True
isolated_build = True

[testenv]

[testenv:lint]
skipdist = True
deps = flake8
commands = flake8 {posargs:--max-line-length 80} hrpc/

[testenv:sort]
skipdist = True
deps = isort
commands = isort {posargs:-c} hrpc/

[testenv:format]
skipdist = True
deps = black
commands = black {posargs:--check} hrpc/

[testenv:type]
skipdist = True
deps = mypy
commands = mypy {posargs:--ignore-missing-imports} hrpc/
"""
